# pyinfra-playground

./: .pdm-python  deploy.py  justfile  pyproject.toml
facts/: swap_enabled.py
inventories/: dev.py
